ipc/ipdl/test/ipdl/error/BadNestedManager.ipdl
//error: protocol `BadNestedManagee' requires more powerful send semantics than its manager `BadNestedManager' provides

include protocol BadNestedManagee;

nested(upto not) async protocol BadNestedManager {
    manages BadNestedManagee;
parent:
    async BadNestedManagee();
};
